--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
   </div>
 </div>
 
+<p style="text-align:center; margin-top:20px; font-size:13px; color:#666; font-style:italic;">
+  ✨ Hecho por el <span style="color:#a62658; font-weight:bold;">Equipo Digital</span> de <span style="color:#a62658; font-weight:bold;">Hotel Marina Copán</span> ✨
+</p>
+
 <button class="exportar-btn" onclick="exportar('pagina')">📤 Exportar Boletín</button>
 
 <script>
