--- a/index.html
+++ b/index.html
@@ -312,6 +312,11 @@
 
 <button class="exportar-btn" onclick="exportar('pagina')">📤 Exportar Boletín</button>
 
+<button style="background-color:#004aad;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;"
+        onclick="window.open('https://smallpdf.com/es/convertidor-pdf', '_blank')">
+  Convertir a PDF
+</button>
+
 <script>
   function exportar(idPagina) {
     const pagina = document.getElementById(idPagina);
