--- a/index.html
+++ b/index.html
@@ -414,24 +414,26 @@
     const element = document.getElementById(idPagina);
     const filename = `Boletin_MarinaCopan_${new Date().toLocaleDateString('es-HN').replace(/\//g, '-')}.pdf`;
 
-    // Opciones de configuración para html2pdf.js
+    // Opciones de configuración AGRESIVAS para html2pdf.js
     const opt = {
-      margin: 5, // Márgenes reducidos
+      margin: 5,
       filename: filename,
       image: { type: 'jpeg', quality: 0.98 },
       html2canvas: { 
-        scale: 4, // Escala alta para nitidez
+        scale: 4, 
         logging: false, 
         dpi: 300,
         letterRendering: true,
-        useCORS: true 
+        useCORS: true, // Forzamos CORS
+        // ESTO ES CLAVE: Le decimos que ignore fallos de seguridad en imágenes
+        allowTaint: true 
       },
       jsPDF: { 
         unit: 'mm', 
         format: 'a4', 
         orientation: 'portrait' 
       },
-      // Clave para asegurar una sola página: activa la función 'fit'
+      // Clave para asegurar una sola página
       pagebreak: { mode: 'avoid-all' } 
     };
 
@@ -455,6 +457,9 @@
         img.src = e.target.result;
         img.alt = "Imagen subida";
         
+        // **IMPORTANTE:** Agregamos el atributo crossorigin a la imagen subida
+        img.setAttribute('crossorigin', 'anonymous');
+
         currentPlaceholder.appendChild(img);
         currentPlaceholder.onclick = null; 
         currentPlaceholder.style.padding = '0';
