--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF="8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boletín Visual Digital - Hotel Marina Copán</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-ZfK7hV32z4s/uR00t2J7t/dF0uMvX3qY3aJvJvK/7R02hB/hN2f6w+3+K1Qk4/1+F/w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <style>
     /* VARIABLES Y FUENTES */
     :root {
